--- a/index.html
+++ b/index.html
@@ -40,7 +40,89 @@
         </header>
 
         <main>
+            <!-- Service Section -->
+        <section class="service_section">
 
+            <div class="service_left_area">
+
+                <div class="service_list_btn_div" >
+                    <button class="service_list_btn">
+                        Service List
+                    </button>
+                </div>
+
+                <div class="service_details">
+                    <h2>
+                        <span class="primary_color">Services</span> We Can Help You With !
+                    </h2>
+                    <p>
+                        Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra <br> libero habitasse porro fames quos
+                        pharetra diam cupidatat ligula! Netus! Quos dignissi mos laoreet.
+                    </p>
+                    <ol class="service_li">
+                        <li>Nobis ridiculus cupiditate egestas commodi.</li>
+                        <li>Ipsum dui curabitur dapibuish mollitia.</li>
+                    </ol>
+                </div>
+
+                <div class="athor_details">
+                    <div class="athor_image">
+                        <img src="asset/image/author.jpg" alt="">
+
+                        <p>
+                            George Smith <br>
+                            CEO, <small>Director</small>
+                        </p>
+                    </div>
+                    <div class="more_details_div">
+                        <button class="more_details_btn">
+                            MORE DETAILS
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <div class="service_right_area">
+                <div class="service_div">
+
+                    <div class="service_section_item">
+                     <div>
+                        <img src="asset/icons/coding.png" alt="">
+                        <p>Website Development</p>
+                     </div>
+                    </div>
+
+                    <div class="service_section_item">
+                        <div>
+                            <img src="asset/icons/bar-chart.png" alt="">
+                            <p>Graphic & Sketch Designing</p>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="service_div">
+
+                    <div class="service_section_item">
+                     <div>
+                        <img src="asset/icons/startup.png" alt="">
+                        <p>SEO & Content Writing</p>
+                     </div>
+                    </div>
+
+                    <div class="service_section_item">
+                        <div>
+                            <img src="asset/icons/digital-marketing.png" alt="">
+                            <p>Digital Market Planning</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
         </main>
 
         <footer>
